--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "next": "16.1.1",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^8.0.0",
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "recharts": "^2.15.4",
-    "resend": "^6.9.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.4",
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
